Firefox small checkbox/radio visible bug fix.

--- a/MntoneHtml5UIKit/mnuik/less/styles/checkbox.less
+++ b/MntoneHtml5UIKit/mnuik/less/styles/checkbox.less
@@ -5,6 +5,7 @@
 input[type=checkbox] {
 	overflow: hidden;
 	position: absolute;
+	left: -9px;
 	height: 0;
 	width: 0;
 
