--- a/MntoneHtml5UIKit/mnuik/less/styles/radio.less
+++ b/MntoneHtml5UIKit/mnuik/less/styles/radio.less
@@ -1,11 +1,11 @@
 ﻿// Mntone HTML5 UIKit (MNKit) is under MIT license. Copyright (C) 2014 mntone
 
 @import "../mixins/basic.less";
-@import "../mixins/flex.less";
 
 input[type=radio] {
 	overflow: hidden;
 	position: absolute;
+	left: -9px;
 	height: 0;
 	width: 0;
 
